// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton animation none 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component p-skeleton-none"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; position: relative;"
  />
</div>
`;

exports[`Skeleton animation wave 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; position: relative;"
  />
</div>
`;

exports[`Skeleton border radius 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; border-radius: 16px; position: relative;"
  />
</div>
`;

exports[`Skeleton border radius 2`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; border-radius: 16px; position: relative;"
  />
</div>
`;

exports[`Skeleton default 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; position: relative;"
  />
</div>
`;

exports[`Skeleton shape circle 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component p-skeleton-circle"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; position: relative;"
  />
</div>
`;

exports[`Skeleton shape rectangle 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 1rem; position: relative;"
  />
</div>
`;

exports[`Skeleton size in pixels 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 50px; height: 50px; position: relative;"
  />
</div>
`;

exports[`Skeleton size width and height 1`] = `
<div>
  <div
    aria-hidden="true"
    class="p-skeleton p-component"
    data-pc-name="skeleton"
    data-pc-section="root"
    style="width: 100%; height: 2rem; position: relative;"
  />
</div>
`;
